# tcalc

./: .gitignore  README.md  package.yaml  tcalc.cabal
exe/: ArgParser.hs  Main.hs
src/: Interpreter.hs  InterpreterT.hs  LensOrphans.hs  Main.hs  Parser.hs  Types.hs  Util.hs
src/Parser/: Common.hs  Expression.hs  Identifier.hs  Literals.hs  Pos.hs  Statement.hs
test/: LiteralsTests.hs  Spec.hs  StatementTests.hs
