name:                tcalc
version:             0.1.0.0
synopsis:            CLI for performing time-based calculations.
-- description:
homepage:            https://github.com/rdnetto/tcalc#readme
license:             Apache
license-file:        LICENSE
author:              Reuben D'Netto
maintainer:          rdnetto@gmail.com
copyright:           Copyright 2018
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Interpreter,
                       InterpreterT
                       LensOrphans,
                       Parser.Common,
                       Parser.Expression,
                       Parser.Identifier,
                       Parser.Literals,
                       Parser.Statement,
                       Types
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude,
                       OverloadedStrings,
                       PartialTypeSignatures,
                       ScopedTypeVariables
  ghc-options:         -O2 -Wall -Wno-orphans -Widentities -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5,
                       ansi-terminal,
                       basic-prelude,
                       megaparsec,
                       microlens,
                       microlens-mtl,
                       microlens-th,
                       mtl,
                       text,
                       unordered-containers

executable tcalc
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude,
                       OverloadedStrings,
                       ScopedTypeVariables
  ghc-options:         -O2 -Wall -Wno-orphans -Widentities -Wredundant-constraints
  build-depends:       base >= 4.7 && < 5,
                       basic-prelude,
                       haskeline,
                       megaparsec,
                       tcalc,
                       text

test-suite tcalc_test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  build-depends:       base,
                       basic-prelude,
                       megaparsec,
                       tcalc,
                       tasty,
                       tasty-hunit
  ghc-options:         -O2 -Wall -Wno-orphans -Widentities -Wredundant-constraints -rtsopts
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude,
                       OverloadedStrings,
                       ScopedTypeVariables
  main-is:             Spec.hs
  other-modules:       LiteralsTests
